WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129243
AX: AccessibilityObject::findMatchingObjects should never include 'this' in results.
https://bugs.webkit.org/show_bug.cgi?id=129243
Summary
AX: AccessibilityObject::findMatchingObjects should never include 'this' in r...
Samuel White
Reported
2014-02-24 00:16:26 PST
findMatchingObjects searches children of 'this', it should never be possible for 'this' to be included in results.
Attachments
Patch.
(4.79 KB, patch)
2014-02-24 12:35 PST
,
Samuel White
cfleizach
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(462.52 KB, application/zip)
2014-02-24 13:35 PST
,
Build Bot
no flags
Details
Updated patch.
(4.80 KB, patch)
2014-02-24 13:38 PST
,
Samuel White
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-02-24 00:16:56 PST
<
rdar://problem/16145684
>
Radar WebKit Bug Importer
Comment 2
2014-02-24 00:17:00 PST
<
rdar://problem/16145685
>
Samuel White
Comment 3
2014-02-24 12:35:54 PST
Created
attachment 225083
[details]
Patch. Previously, the container object could be included in the search results when searching backwards. This patch removes that and makes forward/backwards results consistent with each other.
chris fleizach
Comment 4
2014-02-24 13:01:46 PST
Comment on
attachment 225083
[details]
Patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=225083&action=review
> LayoutTests/platform/mac/accessibility/search-predicate-container-not-included.html:25 > + shouldBe("forwardResult", "undefined");
Make sure this works on wk2 as well as wk1
Samuel White
Comment 5
2014-02-24 13:25:01 PST
(In reply to
comment #4
)
> (From update of
attachment 225083
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=225083&action=review
> > > LayoutTests/platform/mac/accessibility/search-predicate-container-not-included.html:25 > > + shouldBe("forwardResult", "undefined"); > > Make sure this works on wk2 as well as wk1
Looks like it doesn't, fixing now.
Build Bot
Comment 6
2014-02-24 13:35:52 PST
Comment on
attachment 225083
[details]
Patch.
Attachment 225083
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5780764994043904
New failing tests: svg/masking/mask-negative-scale.svg platform/mac/accessibility/search-predicate-container-not-included.html
Build Bot
Comment 7
2014-02-24 13:35:53 PST
Created
attachment 225091
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Samuel White
Comment 8
2014-02-24 13:38:51 PST
Created
attachment 225092
[details]
Updated patch. Updated test to check the result count instead of the result type to make the test more test harness agnostic.
WebKit Commit Bot
Comment 9
2014-02-24 16:24:03 PST
Comment on
attachment 225092
[details]
Updated patch. Clearing flags on attachment: 225092 Committed
r164616
: <
http://trac.webkit.org/changeset/164616
>
WebKit Commit Bot
Comment 10
2014-02-24 16:24:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug