AX: AccessibilityObject::findMatchingObjects should never include 'this' in results. https://bugs.webkit.org/show_bug.cgi?id=129243

Reviewed by Chris Fleizach.

Source/WebCore:

Fix removes the container object from the search results when searching backwards. This
makes backwards & forwards search results consistent with each other.

Test: platform/mac/accessibility/search-predicate-container-not-included.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::findMatchingObjects):

LayoutTests:

Added test to ensure that the container you are searching in can never be a search result.

* platform/mac/accessibility/search-predicate-container-not-included-expected.txt: Added.
* platform/mac/accessibility/search-predicate-container-not-included.html: Added.


Canonical link: https://commits.webkit.org/147324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164616 268f45cc-cd09-0410-ab3c-d52691b4dbfc